--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.4
 Django==3.2.3
 django-debug-toolbar==3.2.1
+django-extensions==3.1.3
 django-jazzmin==2.4.7
 django-widget-tweaks==1.4.8
 flake8==3.9.2
@@ -10,3 +11,4 @@ pycodestyle==2.7.0
 pyflakes==2.3.1
 pytz==2021.1
 sqlparse==0.4.1
+Werkzeug==2.0.1
