--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,28 @@
 asgiref==3.3.4
+defusedxml==0.7.1
+diff-match-patch==20200713
 Django==3.2.3
+django-crispy-forms==1.12.0
 django-debug-toolbar==3.2.1
 django-extensions==3.1.3
+django-import-export==2.5.0
 django-jazzmin==2.4.7
+django-prometheus==2.1.0
 django-widget-tweaks==1.4.8
+et-xmlfile==1.1.0
 flake8==3.9.2
+MarkupPy==1.14
 mccabe==0.6.1
+odfpy==1.4.1
+openpyxl==3.0.7
 Pillow==8.2.0
+prometheus-client==0.11.0
 pycodestyle==2.7.0
 pyflakes==2.3.1
 pytz==2021.1
+PyYAML==5.4.1
 sqlparse==0.4.1
+tablib==3.0.0
 Werkzeug==2.0.1
+xlrd==2.0.1
+xlwt==1.3.0
