--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.4
 defusedxml==0.7.1
 diff-match-patch==20200713
 Django==3.2.3
+django-bootstrap-datepicker-plus==3.0.5
 django-crispy-forms==1.12.0
 django-debug-toolbar==3.2.1
 django-extensions==3.1.3
