--- a/requirements.txt
+++ b/requirements.txt
@@ -12,26 +12,33 @@ django-ckeditor==6.1.0
 django-crispy-forms==1.12.0
 django-debug-toolbar==3.2.1
 django-extensions==3.1.3
+django-filter==21.1
 django-heroku==0.3.1
 django-import-export==2.5.0
 django-jazzmin==2.4.7
 django-js-asset==1.2.2
 django-prometheus==2.1.0
 django-widget-tweaks==1.4.8
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.1.0
 et-xmlfile==1.1.0
 flake8==3.9.2
 gunicorn==20.1.0
 html5lib==1.1
+importlib-metadata==4.11.2
+Markdown==3.3.6
 MarkupPy==1.14
 mccabe==0.6.1
 odfpy==1.4.1
 openpyxl==3.0.7
 Pillow==8.2.0
 prometheus-client==0.11.0
+psycopg2==2.9.3
 psycopg2-binary==2.9.1
 pycodestyle==2.7.0
 pycparser==2.20
 pyflakes==2.3.1
+PyJWT==2.3.0
 pyphen==0.11.0
 pytz==2021.1
 PyYAML==5.4.1
@@ -45,3 +52,4 @@ Werkzeug==2.0.1
 whitenoise==5.2.0
 xlrd==2.0.1
 xlwt==1.3.0
+zipp==3.7.0
